--- a/deployment.yml
+++ b/deployment.yml
@@ -5,4 +5,4 @@ jobs:
    timeout: 2h30m
    steps:
      - name: run models # Give each step in your job a name. This will enable you to track the steps in the logs.
-       command: dbt run -m email_lemonaid_report # Enter the dbt command that should run in this step. This example will run all your models. For a list of available commands visit https://docs.getdbt.com/reference/model-selection-syntax/.
+       command: dbt run -m email_lemonaid_daily_report_raw # Enter the dbt command that should run in this step. This example will run all your models. For a list of available commands visit https://docs.getdbt.com/reference/model-selection-syntax/.
